:memo:中国近现代史纲要 part1

--- a/思想政治理论.md
+++ b/思想政治理论.md
@@ -834,7 +834,7 @@
 
 5.毛泽东思想**活的灵魂**是贯穿于毛泽东思想各个组成部分的**立场、观点、方法**，体现为**实事求是、群众路线、独立自主**三个基本方面。
 
-6.实事求是既是**毛泽东思想的基本点**，又是**毛泽东思想的精髓**。
+6.**实事求是**既是**毛泽东思想的基本点**，又是**毛泽东思想的精髓**。邓小平理论**活的灵魂和精髓**：**解放思想，实事求是**。
 
 7.毛泽东指出：“**‘实事’**就是**客观存在着的一切事物**，**‘是’**就是**客观事物的内部联系**，即规律性，‘**求’**就是我们去研究。”
 
@@ -885,7 +885,7 @@
 
 18.新民主主义文化就是无产阶级领导的人民大众的反帝反封建的问候，即民族的科学的大众的文化。其中“民族的”，就其内容说，是指**反对帝国主义压迫，主张中华民族的尊严和独立**。
 
-19.坚持党对军队的绝对领导，这是建设新型人民军队的**根本原则**，是保持人民军队无产阶级性质和建军宗旨的**根本前提**，也是毛泽东建军思想的**核心**。
+19.坚持**党对军队的绝对领导**，这是建设新型人民军队的**根本原则**，是保持人民军队无产阶级性质和建军宗旨的**根本前提**，也是毛泽东建军思想的**核心**。
 
 20.几组三对三关系：
 
@@ -978,7 +978,7 @@
 
 015.**近代中国社会的阶级结构**是**“两头小中间大”**，“中间”是指：**农民、城市小资产解决以及其他中间阶级，占多数**。“两头”的一头是**无产阶级**，另一头是**地主大资产阶级**。
 
-016.新民主主义革命时期，党领导的统一战线，先后经过了第一次国共合作的**国民革命联合战线**、工农民主统一战线、**抗日民族统一战线**、人民民主统一战线等几个时期。加粗两个统一战线有国共合作为基础。
+016.
 
 017.人民军**队政治工作**的**基本原则**：
 
@@ -1033,7 +1033,7 @@
 | 第二步 | 属于**半社会主义**性质         |
 | 第三步 | 基本上成为**社会主义国营**性质 |
 
-32.第一步实行初级形式的国家资本主义。国家在私营工业中实行委托加工、计划订货、统购包销，这主要是**同资本家在企业外部的合作**。
+32.第一步实行初级形式的国家资本主义。国家在私营工业中实行**委托加工、计划订货、统购包销**，这主要是**同资本家在企业外部的合作**。
 
 022.新民主主义社会有五种经济成分，其中**主要的经济成分**有三种：
 
@@ -1043,8 +1043,8 @@
 
 **过渡性质的经济成分**有两种：
 
-1. 半社会主义性质的合作社经济（个体经济向社会主义集体经济过渡的形式）
-2. 国家资本主义经济（私人资本主义经济向社会主义国营经济过渡的形式）
+1. 半社会主义性质的**合作社经济**（个体经济向社会主义集体经济过渡的形式）
+2. **国家资本主义经济**（私人资本主义经济向社会主义国营经济过渡的形式）
 
 023.新民主主义时期三种不同性质的经济成分及与之相联系的三者基本的阶级力量之间的矛盾，集中表现为：
 
@@ -1062,7 +1062,7 @@
 
 1. 委托加工
 2. 计划订货
-3. 统购包销（不等于统购统销——计划收购和计划供应）
+3. 统购包销（不等于统购统销——**计划收购**和**计划供应**）
 4. 经销代销
 
 026.国家资本主义：
@@ -1082,7 +1082,7 @@
 1. 标志着中国历史上长达数千年的**阶级剥削制度的结束**
 2. 实现了由新民主主义向社会主义的转变
 3. 标志着社会主义基本制度在我国确立
-4. 标志着我国社会主义初级阶段就此开始
+4. 标志着我国社会主义**初级阶段就此开始**（进入初级阶段）
 
 029.1956年三大改造基本完成，社会主义基本制度在中国确立的时候，马克思主义**同中国实际的“第二次结合”刚开始，并没有完成**。
 
@@ -1124,6 +1124,12 @@
 | 党的十三大     | 邓小平理论的轮廓形成   |
 | 1992年南方谈话 | 邓小平理论逐步走向成熟 |
 
+邓小平理论的形成条件：
+
+1. 时代背景(和平与发展成为时代主题)
+2. 历史根据(社会主义建设的经验教训)
+3. 现实依据(改革开放和现代化建设)
+
 036.中国特色社会主义理论体系逐步形成和发展的**社会历史条件**是：
 
 1. 对国际形势深刻变化和世界发展新趋势的深刻把握（国际背景）
@@ -1138,6 +1144,8 @@
 38.**“以经济建设为中心，坚持四项基本原则，坚持改革开放”**（一个中心两个基本点）是实现社会主义现代化奋斗目标的**基本途径**。**“以经济建设为中心”**回答了社会主义的**根本任务问题**，“坚持四项基本原则”回答了解放和发展生产力的**政治保证问题**，“坚持改革开放”回答了社会主义的**发展动力和外部条件问题**。
 
 39.社会主义的**根本任务**是**发展生产力**。**共同富裕**是中国特色社会主义的**本质要求**。
+
+中特新时代**总任务**：1.**中华民族伟大复兴**  2.**社会主义现代化**
 
 40.社会主义**改革**不是原有经济体制的细枝末节的修补，...，不是也不允许否定和抛弃我们建立起来的社会主义基本制度，而是**社会主义制度的自我完善和发展**。
 
@@ -1229,8 +1237,8 @@
 
 |                | 是习近平新时代中特思想的 | 内涵                                         | 作用                                                         |
 | -------------- | ------------------------ | -------------------------------------------- | ------------------------------------------------------------ |
-| 十个明确       | **主体内容**             | 集中体现这一思想的主要观点和基本精神         | 构成这一思想体系的四梁八柱，发挥**统摄作用**                 |
-| 十四个坚持     | **重要组成部分**         | 在治国理政各方面作出的理论分析和政策指导     | 构成了新时代坚持和发展中国特色社会主义的**基本方略**         |
+| 十个明确       | **主体内容**             | 集中体现这一思想的主要观点和基本精神         | 习近平新时代中国特色社会主义思想**最重要、最核心**的内容；构成这一思想体系的四梁八柱，发挥**统摄作用**，是指导思想层面的论述。 |
+| 十四个坚持     | **重要组成部分**         | 在治国理政各方面作出的理论分析和政策指导     | 落实习近平新时代中国特色社会主义思想的**实践要求**；构成了新时代坚持和发展中国特色社会主义的**基本方略** |
 | 十三个方面成就 |                          | 对新时代伟大实践进行了科学总结               | 全景式地展示了习近平新时代中国特色社会主义思想的**理论与实践成果** |
 | 六个必须坚持   |                          | 赋予了马克思主义世界观和方法论以新的时代内涵 | 彰显了习近平新时代中国特色社会主义思想的**理论品格和鲜明特征** |
 
@@ -1260,16 +1268,18 @@
 
 4.我们坚定“四个自信”的**理论支撑**和**根本依据**：**马克思主义深刻揭示了社会主义必然代替资本主义的客观规律**
 
-5.道路自信、理论自信、制度自信说到底是要坚定**文化自信**，文化自信是**更基础、更广泛、更深厚的自信**，是一个国家、一个民主发展中**最基本、最深沉、最持久的力量**。
+5.道路自信、理论自信、制度自信说到底是要坚定**文化自信**（最根本），文化自信是**更基础、更广泛、更深厚的自信**，是一个国家、一个民主发展中**最基本、最深沉、最持久的力量**。
 
 6.“四个全面”
 
-| 四个全面                       | 定位     | 地位         |
-| ------------------------------ | -------- | ------------ |
-| **全面建设社会主义现代化国家** | 战略目标 | **引领地位** |
-| 全面深化改革                   | 战略举措 | 提供重要保障 |
-| 全面依法治国                   | 战略举措 | 提供重要保障 |
-| 全面从严治党                   | 战略举措 | 提供重要保障 |
+| 四个全面                       | 定位     | 地位                 |
+| ------------------------------ | -------- | -------------------- |
+| **全面建设社会主义现代化国家** | 战略目标 | **引领性地位**       |
+| 全面深化改革                   | 战略举措 | 突破性、先导性、动力 |
+| 全面依法治国                   | 战略举措 | 提供重要保障         |
+| 全面从严治党                   | 战略举措 | 提供根本保证         |
+
+6a.全面深化改革坚持的正确方法论(**内在要求**)：**系统性、整体性、协同性**
 
 02.坚定理论自信，就是坚信**中国特色社会主义理论体系**是指导党和人民实现中华民族伟大复兴的正确理论，是立足时代前沿、与时俱进的科学理论。
 
@@ -1279,9 +1289,19 @@
 
 ### 第二章 以中国式现代化全面推进中华民族伟大复兴
 
-7.实现中华民族伟大复兴的中国梦，**本质**是**国家富强、民族振兴、人民幸福**。
+7.实现中华民族伟大复兴的中国梦的**本质**是：
 
-8.中国式现代化的**显著特征**：**人口规模巨大**
+1. **国家富强(基础和保证)**
+2. **民族振兴(基础和保证)**
+3. **人民幸福(题中之义和必然要求、出发点与落脚点)**
+
+8.中国现代化的五个特征：
+
+1. 人口规模巨大的现代化（中国式现代化的**显著特征**）
+2. 全体人民共同富裕的现代化
+3. 物质文明和精神文明相协调的现代化
+4. 人与自然和谐共生的现代化
+5. 走和平发展道路的现代化
 
 9.中国式现代化的本质特征/**区别于西方现代化**的**显著标志**：**共同富裕**
 
@@ -1325,7 +1345,12 @@
 
 17.**现代化**的**最终目标**是实现：**人自由而全面的发展**
 
-09.
+09.我国**基本国策**：
+
+1. 对外开放
+2. 一国两制
+3. 节约资源
+4. 保护环境
 
 ### 第五章 全面深化改革
 
@@ -1342,9 +1367,9 @@
 
 20.**摸着石头过河**是**富有中国特色、符合中国国情的改革方法**
 
-010.全面建成小康社会是实现中华民族伟大复兴中国梦的**关键一步**。
+010.全面建成小康社会是实现中华民族伟大复兴中国梦的**关键一步**。实现中华民族伟大复兴，**道路问题是最根本的问题**。
 
-011.改革开放是我们党的一次**伟大觉醒**，是决定当代中国命运的**关键一招**，也是决定实现“两个一百年”奋斗目标、实现中华民族伟大复兴的**关键一招**。
+011.**改革开放**是我们党的一次**伟大觉醒**，是决定当代中国命运的**关键一招**，也是决定实现“两个一百年”奋斗目标、实现中华民族伟大复兴的**关键一招**。发展中国家崛起的第一个里程碑和重要标志——**万隆会议**。
 
 012.党的**十一届三中全会**，**开启了改革开放和社会主义现代化建设新时期**。
 
@@ -1359,7 +1384,7 @@
 
 21.十八大以来，我们党对经济社会发展提出了许多重大理论和战略，其中**新发展理念**是**最重要、最主要**的。
 
-22.新发展理念
+22.新发展理念：
 
 | 新发展理念 | 地位                                             | 解决                 |
 | ---------- | ------------------------------------------------ | -------------------- |
@@ -1394,7 +1419,7 @@
 
 | 乡村振兴战略                                     | 地位     |
 | ------------------------------------------------ | -------- |
-| 农业农村现代化                                   | 总目标   |
+| 农业农村现代化（也是根本目的）                   | 总目标   |
 | 农业农村优先发展                                 | 总方针   |
 | 产业兴旺、生态宜居、乡风文明、治理有效、生活富裕 | 总要求   |
 | 建立健全城乡融合发展体制机制和政策体系           | 制度保障 |
@@ -1447,7 +1472,7 @@
 
 37.**中华民族共同体意识**是**民族团结之本**。
 
-38.**新时代爱国统一战线的历史责任**是**促进中华儿女大团结**
+38.
 
 019.**民主**是**全人类共同价值**，是人类政治文明发展的成果。
 
@@ -1486,12 +1511,12 @@
 2. 坚持我国国体、政体不动摇
 3. 全面贯彻实施宪法
 
-028.加快**建设法治中国**必须全面推进：（习近平法治思想主要内容——十一个坚持之一）
+028.加快**建设法治中国**必须全面推进（或者说全面依法治国的基本格局）：（习近平法治思想主要内容——十一个坚持之一）
 
-1. 科学立法
-2. 严格执法
-3. 公正司法
-4. 全民守法
+1. 科学立法(前提、龙头环节：为保障人权提供了坚实的法律体系)
+2. 严格执法(关键：为保障人权提供了良好的法治政府环境)
+3. 公正司法(重点：为保障人权提供了有力的司法救济途径)
+4. 全民守法(基础)
 
 029.法治中国建设的**工作布局**是：
 
@@ -1586,13 +1611,15 @@
 
 49.**健全和完善社会保障体系**是新时代加强社会建设的重要**着力点**。
 
-50.社会治理理念：共建共治共享
+50.社会治理理念（社会治理格局）：**共建、共治、共享**
 
 | 社会治理理念 | 内容                                                         | 是社会治理的 |
 | ------------ | ------------------------------------------------------------ | ------------ |
 | 共建         | 共同参与社会建设，要求突出制度和体系建设的基础性、战略性地位 | 基础         |
 | 共治         | 共同参与社会治理，要求梳理大社会观、大治理观，打造全民参与的开放治理体系 | 关键         |
 | 共享         | 共同享有社会治理成功，要求社会治理的成效更多更公平惠及全体人民 | 目标         |
+
+全球治理观：**共商、共建、共享**
 
 045.**保障和改善民生的重要原则**：
 
@@ -1603,7 +1630,7 @@
 
 047.保障和改善民生的**重要方针**：坚持尽力而为、量力而行
 
-048.**就业**是**最基本的民生**
+048.**就业**是**最基本的民生**；生存权发展权是**首要的基本人权**；人民幸福生活是**最大的人权**；
 
 ### 第十二章 建设社会主义生态文明
 
@@ -1625,13 +1652,13 @@
 
 54.总体国家安全观：
 
-| 总体国家安全观           | 地位 |
-| ------------------------ | ---- |
-| 人民安全                 | 宗旨 |
-| 政治安全                 | 根本 |
-| 经济安全                 | 基础 |
-| 军事、科技文化、社会安全 | 保障 |
-| 国际安全                 | 依托 |
+| 总体国家安全观           | 地位       |
+| ------------------------ | ---------- |
+| 人民安全                 | 宗旨、基石 |
+| 政治安全                 | 根本       |
+| 经济安全                 | 基础       |
+| 军事、科技文化、社会安全 | 保障       |
+| 国际安全                 | 依托       |
 
 55.构建**新发展格局**的**重要前提和保障**：**牢牢守住安全发展这条底线**。
 
@@ -1787,6 +1814,13 @@
 3. 关键在严
 4. 要害在治
 
+新时代全面从严治党：
+
+1. 新时代党的建设的**主线**——加强党的长期执政能力建设、先进性和纯洁性建设
+2. 以党的政治建设为**统领**；党的政治建设的首要任务——保证全党服从中央，坚持党中央权威和集中统一领导
+3. 以坚定理想信念宗旨为**根基**；
+4. 以调动全党积极性、主动性、创造性为**着力点**；
+
 064.要落实新时代**党的建设总要求**，把全的要求、严的基调、治的理念**落实到全面从严治党全过程**，坚持
 
 1. 内容上全覆盖
@@ -1884,6 +1918,11 @@
 
 19.辛亥革命失败的原因**从根本上说**，是因为在帝国主义时代，**在半殖民地半封建的中国，资本主义的建国方案是行不通的**。
 
+第三条路的幻灭：
+
+1. **资产阶级建国方案在中国行不通**。首先，从民族资产阶级自身来看，民族资本主义经济的特点决定了民族资产阶级没有勇气和能力去领导人民进行反帝反封建的革命斗争，不能为资产阶级共和国扫清障碍。
+2. **资产阶级两面性：革命性和软弱性**。其次，从当时中国所处的时代条件来看，帝国主义列强不可能使中国成为一个独立、富强的资本主义国家。再次，从中国的革命形势来看，国民党当局不允许任何阻止其一党专政的力量存在。
+
 20.资产阶级革命派的这些弱点、错误，从**根源**上讲，在于**中国民族资产阶级的软弱性和妥协性**。
 
 ### 第四章 中国共产党成立和中国革命新局面
@@ -1949,24 +1988,241 @@
 
 47.在新民主主义革命时期，中国共产党在不同阶段建立了**不同性质的革命政权**：
 
-| 时期             | 革命政权的性质                                           |
-| ---------------- | -------------------------------------------------------- |
-| 土地革命战争时期 | （苏维埃政权）工农民主专政                               |
-| 抗日战争时期     | 抗日民族统一战线性质、一切赞成抗日又赞成民主的人们的政权 |
-| 解放战争时期     | 各革命阶级的联合专政                                     |
-| 新中国成立初期   | 人民民主专政                                             |
+| 时期             | 革命政权的性质                                               |
+| ---------------- | ------------------------------------------------------------ |
+| 土地革命战争时期 | （苏维埃政权）工农民主专政                                   |
+| 抗日战争时期     | 抗日民族统一战线性质、一切赞成抗日（反帝）又赞成民主的人们的政权 |
+| 解放战争时期     | 各革命阶级的联合专政                                         |
+| 新中国成立初期   | 人民民主专政                                                 |
+
+47a.不同时期的**统一战线**：
+
+|             | 时期               | 标志性事件             | 统一战线                             |
+| ----------- | ------------------ | ---------------------- | ------------------------------------ |
+| 1925-1927年 | 大革命时期         | 五卅运动               | 国民革命统一战线(国共合作统一战线)   |
+| 1927-1937   | 土地革命时期       | 八七会议               | 工农民主统一战线                     |
+| 1937-1945   | (全面)抗日战争时期 | 西安事变(时局转换枢纽) | 抗日民族统一战线（也有国共合作基础） |
+| 1945-1949   | 解放战争时期       | 国民党进攻中原解放区   | 人民民主统一战线                     |
+
+* 统一战线主题——**大团结大联合**(政协主题  ：**团结与民主**)
+* 统一战线方针——坚持一致性和多样性的统一
+* 根本任务——争取人心、凝聚力量
+
+* **新时代爱国统一战线**的**历史责任是促进中华儿女大团结**
 
 48.20世纪30年代前、中期，中国共产党内屡次出现严重的“左”倾错误，其原因主要在于：中国共产党还**不善于把马克思列宁主义与中国实际全面地、正确地结合起来**。
 
 49.**遵义会议**的鲜明特点是**坚持真理、修正错误**，遵义会议**开启了中国共产党独立自主解决中国革命实际问题的新阶段**，集中解决了在当时具有决定意义的**军事问题和组织问题**。
 
-50.毛泽东的著作：
+50.毛泽东及中共中央领导人的著作：
 
 | 著作                              | 内容                                                         |
 | --------------------------------- | ------------------------------------------------------------ |
 | 《论反对日本帝国主义的策略》-1935 | 系统说明了党的**政治策略**上的诸问题                         |
 | 《中国革命战争的战略问题》-1936   | 总结土地革命战争中党内在军事问题上的争论，系统说明了有关**中国革命战争战略方面**的诸问题 |
-| 《论持久战》-1938                 |                                                              |
-| 《中国革命和中国共产党》-1939     |                                                              |
+| 《论持久战》-1938                 | 兵民是胜利之本                                               |
+| 《中国革命和中国共产党》-1939     | 第一次提出了新民主主义革命的科学概念                         |
 
-第六章 中华民族的抗日战争
+| 时期                 | 著作                                                         |
+| -------------------- | ------------------------------------------------------------ |
+| 土地革命时期早期     | 1.《中国的红色政权为什么能够存在》论证**红色政权能长期存在并发展的主客观条件**<br />2.《井冈山的斗争》提出**工农武装割据的思想**<br />3.《星星之火，可以燎原》进一步阐述了中国革命只能走与资本主义国家不同的道路。提出了**党把工作重心由城市转移到农村**，在农村开展游击战争，深入进行土地革命，建立和发展红色政权，待条件成熟时再夺取全国政权的**中国革命新道路的思想**。<br />4.《反对本本主义》**初步阐明唯物辩证的思想路线**，即坚持理论与实际相结合的原则的极端重要性。提出**“没有调查就没有发言权”**，**革命道路理论的提出标志毛泽东思想==初步形成==**，==成熟==的标志是**新民主主义理论的系统阐述** |
+| 土地革命尾期         | 1.1935.12《论反对日本帝国主义的策略》阐明党的**抗日民族统一战线**新政策，系统解决了党的**政治路线**问题(解决政治问题会议是瓦窑堡会议)<br />《中国革命战争的战略问题》<br />《实践论》《矛盾论》批判了主观主义尤其是教条主义错误，**科学系统阐明党的马克思主义的思想路线** |
+| 抗日战争时期         | 1935年8月1日  《为抗日救国告全体同胞书》即**八一宣言**，呼吁全国各族各界同胞、各军队团结起来，停止内战，一致抗日；<br />《新民主主义论》新民主主义理论的系统阐明，标志着毛泽东思想达到成熟；<br />《论持久战》——兵民是胜利之本   <br />《〈共产党人〉发刊词》<br />《中国革命和中国共产党》第一次提出了新民主主义革命的科学概念 |
+| 延安整风运动         | 《改造我们的学习》-学风(党的高级干部) <br />《整顿党的作风》-党风(全党党员)<br />《反对党八股》-文风(全党党员)   <br />**延安整风运动**，对待犯错误同志的正确方针：**惩前毖后、治病救人**<br />**一切从实际出发（前提）、理论联系实际（途径和方法）、实事求是(实质、核心)、在实践中检验的和发展真理(验证条件、目的)**的==思想路线==**在全党范围确立起来**。 |
+| 新中国成立           | 《论人民民主专政》总结我们是工人阶级领导的，以工农联盟为基础的人民民主专政。我们还必须利用一切有利而不是有害城乡资本主义因素，团结民族资产阶级。民族资产阶级不能充当革命的领导者，也不应该在国家政权中占主要地位 |
+| 探索社会主义道路阶段 | 《论十大关系》基本**方针**——调动国内外一切积极因素为社会主义服务，是马义中国化**第二次结合**的标志，也是中国共产党人**开始探索社会主义道路的标志**。<br />《关于正确处理人民内部矛盾的问题》——仍然存在敌我矛盾、人民内部矛盾，正确处理人民内部矛盾是国家政治的主题<br />《一九五七年夏季的形势》——**六又政治局面**<br />《在晋绥干部会议上的讲话》1948年，**完整阐述了总路线的内容** |
+| 改革开放时期         | 邓小平《解放思想、实事求是、团结一致向前看》——中特理论的**宣言书**(第二个宣言书是南方谈话) |
+
+### 第六章 中华民族的抗日战争
+
+51.九一八事变**揭开了世界反法西斯战争的序幕**
+
+52.“一二·九”运动标志着**中国人民抗日救亡运动新高潮的到来**
+
+53.瓦窑堡会议，提出**党的基本策略任务是建立广泛的抗日民族统一战线**
+
+54.标志着中共中央放弃**反蒋口号**的文件是**《停战议和一致抗日通电》**
+
+54a.标志性事件：
+
+| 事件                      | 标志                                           | 备注                             |
+| ------------------------- | ---------------------------------------------- | -------------------------------- |
+| 九一八事变  1931.9.18     | 抗日战争起点，揭开了世界反法西斯战争的序幕     |                                  |
+| 卢沟桥事变1937.7,7        | 成为世界反法西斯战争的东方主战场               |                                  |
+| 77事变→广州武汉失守       | 是中国抗日战争的战略防御阶段                   |                                  |
+| 广州武汉失守(1938.10)之后 | 是中国抗日战争的战略**相持阶段（最关键阶段）** | 国民党方针——**防共、限共、溶共** |
+
+55.1936年12月12日，**西安事变爆发。西安事变的和平解决成为时局转换的枢纽，十年内战的局面基本结束，国内和平初步实现**。（西安事变**直接促成国共第二次合作**）
+
+56.土地政策：
+
+| 时期                                | 土地政策                                                     |
+| ----------------------------------- | ------------------------------------------------------------ |
+| 太平天国                            | 《天朝田亩制度》                                             |
+| 辛亥革命                            | 民生主义《平均地权》                                         |
+| 大革命时期                          | 《平均地权，节制资本》（后来发展为耕者有其田、新三民主义）   |
+| 土地革命战争时期                    | 开展土地革命，就是要**消灭**封建地主的土地**私有制**，**实行**农民的土地**私有制**(消灭私有变私有)，使广大农民在政治上得到翻身，农村生产力得到解放和发展。《井冈山土地法》**没收一切土地**(有点激进)；《兴国土地法》**没收一切公共土地以及地主阶级的土地**；坚定地依靠贫农、雇农，联合中农、**限制富农**，保护中小工商业者，**消灭地主阶级**；**第一个可以付诸实施的纲领**(**耕者有其田**) |
+| 抗日战争                            | **允许富农收租，减租减息**，发展生产。（**没有耕者有其田**，**削弱**了土地剥削） |
+| 解放战争（土地改革时期）            | 《五四指示》地主剥削土地转移到农民手中(耕者有其田)，用一切方法吸收中农参加运动，**决不可侵犯**中农土地；**一般不变动**富农土地(或者说**征收富农多余土地**)，**废除了土地剥削**。《中国土地法大纲》——废除封建半封建性土地剥削制度，实行耕者有其田的土地制度 |
+| 三大改造前三年(1949-1953  建国初期) | 《中华人民共和国土地改革法》规定了这次土改的目的，是废除地主阶级封建剥削的土地所有制，**实行农民的土地所有制**，解放农村生产力，发展农业生产，为新中国工业化开辟道路。对富农的政策——**保存富农经济(建国初期时)**。 |
+| 三大改造时期(1953-1956)             | 对富农政策——**消灭富农剥削**                                 |
+
+57.**“三三制”**政权包括**共产党员、党外进步人士和中间派**，其中**中间派**包括：**民族资产阶级**和**开明绅士**
+
+抗日民族统一战线中争取的**中间势力**主要是指**民族资产阶级、开明绅士和地方实力派**。
+
+58.抗日战争时期为了克服根据地面临的严重困难局面，毛泽东提出**“发展经济，保障供给”**的经济工作和财政工作总方针。
+
+59.**党的七大**标志着我们党在政治上、思想上、组织上走向了成熟。**“在政治上”的成熟**是指：**全党团结在毛泽东的旗帜下，实现了党的空前统一和团结**。
+
+60.抗日战争**取得完全胜利的重要标志**：1945年10月25日，中国政府在台湾举行受降仪式。根据《波茨坦公告》，**被日本占领50年之久的台湾以及澎湖列岛，重归中国主权管辖**。
+
+61.抗日战争胜利的原因：
+
+1. **以爱国主义为核心的民族精神**是中国人民抗日战争胜利的**决定因素**。
+2. **中国共产党**的中流砥柱作用是中国人民抗日战争胜利的**关键**。
+3. **全民族抗战**是中国人民抗日战争胜利的**重要法宝**
+
+### 第七章 为建立新中国而奋斗
+
+62.1945年8月25日，中共中央在**《对目前时局的宣言》**中明确提出的口号是：**和平、民主、团结**
+
+63.解放区的三件中心工作：**练兵、减租与生产**
+
+64.1947年12月，中共中央在陕北米脂县杨家沟召开会议。这是**蒋介石20年反革命统治由发展到消灭的转折点，这是100多年来帝国主义在中国的统治由发展到消灭的转折点**。
+
+65.中国的民主党派是**阶级联盟性质的政党**。
+
+66.中国各民主党派从成立起，大多同中国共产党建立了不同程度的合作关系，并在斗争实践中逐步发展了这种关系，这是由于各民族党派的政纲不尽相同，但都主张爱国、反对卖国，主张民主，反对独裁。在这些方面，**中国共产党的新民主主义革命政纲基本上一致**。
+
+67.1948年4月30日，中共中央在纪念五一国际劳动节的口号中提出：“各民主党派、各人民团体、各社会贤达迅速召开政治协商会议，讨论并实现召集人民代表大会，成立民主联合政府。”**揭开了中国共产党同各党派、各团体、各族各界人士协商建国的序幕，奠定了中共产党领导的多党合作和政治协商制度的基础。**
+
+68.**《对时局的意见》**这个政治声明表明，**中国各民主党派和无党派人士公开自愿接受中共产党的领导**。
+
+69.1949年春，毛泽东在同有关人士谈话时提出，民主党派应“积极参政，共同建设新中国”。**这标志着民主党派地位的根本变化**，即它们不再是旧中国反动政权下的在野党，而将在中国共产党领导下，共同担负起管理国家和建设新中国的历史重任。
+
+70.1949年9月21日，**中国人民政治协商会议第一届全体会议的召开**，**标志着中国的新型政党制度——中共产党领导的多党合作和政治协商制度的确立**。坚持围绕中心、服务大局是人民政协履行**职能的基本遵循**。
+
+71.总结我们的经验，集中到一点，就是**工人阶级（经过共产党）领导的以工农联盟为基础的人民民主专政**。
+
+72.**党的七大**上归纳的**“三大作风”**：
+
+1. 理论和实践相结合
+2. 密切联系人民群众
+3. 自我批评
+
+73.**七届二中全会**上，毛泽东强调必须保持的党的作风是：**谦虚、谨慎、不骄、不躁和艰苦奋斗的作风**。
+
+### 第八章 中华人民共和国的成立与中国社会主义建设道路的探索
+
+74.完成**民主革命遗留任务**的是：**在新解放区进行土改**
+
+75.**社会主义革命**任务：
+
+1. 没收官僚资本，确立社会主义国营经济的领导地位
+2. 开始将资本主义纳入国家资本主义轨道
+3. 引导个体农民在土地改革后逐步走上互助合作的道路
+
+75a.毛泽东提出的**中国工业化道路内容**之一：**以农业为基础，以工业为主导**。
+
+76.**个别企业的公私合营**是指**国家向私营企业投资入股**，企业的生产资料由国家和资本家共同所有。企业利润的分配仍为“四马分肥”；国家派干部进入企业内部，根据国家建设需要，同工人、资本家共同管理和改造企业。**企业的经营管理以发展生产、满足人民需要和完成国家计划为目标，因而已经属于==半社会主义性质==的企业。**
+
+77.社会主义经济与资本主义经济在**企业内部的联系与合作**：**个别企业的公私合营**。
+
+国家与私人工商业的**外部联系与合作**：**着重发展以加工订货、经销代销为主的初级形式国家资本主义**。
+
+上述二者在企业利润分配上都实行**“四马分肥”**的原则。
+
+78.**全行业公私合营**以后，这些企业基本上已经是社会主义性质的经济，除资本家领取定息外，同国营企业已经没有原则上的区别。
+
+79.1954年9月15日，**人民代表大会制度作为新中国的根本政治制度正式确立**。
+
+80.“一五”计划确定的经济建设指导方针，**突出了几种主要力量发展重工业，建立国家工业化和国防现代化的初步基础的核心要点**，第一个五年计划到第十四个五年计划，**一以贯之的主题是把我国建设成为社会主义现代化国家**。
+
+81.1956年，随着社会主义改造的完成，**以生产资料公有制、按劳分配和计划经济体制为特征的社会主义经济制度**建立起来，这是**中国进入社会主义社会最主要的标志**。
+
+82.毛泽东强调，关于**正确处理人民内部矛盾的问题是社会主义国家政治生活的主题**。这一论断的**根本着眼点**，在于**调动一切积极因素，团结一切可以团结的力量，把全党的注意力转到社会主义建设上来**。
+
+83.解决人民内部矛盾的具体方针、原则：
+
+| 不同领域                   | 方针                                                   |
+| -------------------------- | ------------------------------------------------------ |
+| 政治思想领域               | 团结—批评—团结                                         |
+| 物质利益、分配方面         | 统筹兼顾、适当安排，兼顾国家、集体和个人三方面利益     |
+| 人民群众和政府机关的矛盾   | 民主集中制，克服官僚主义，加强对群众的思想教育         |
+| 科学文化领域               | 百花齐放、百家争鸣                                     |
+| 共产党和民主党派之间的矛盾 | 坚持社会主义道路和共产党领导前提下“长期共存、互相监督” |
+| 民族之间的矛盾             | 民主平等、团结互助的方针                               |
+
+84.1956年**中共八大**指出，我国国内主要矛盾是**“人民对于经济文化迅速发展的需要同当前经济文化不能满足人民需要的状况之间的矛盾”**。全国人民的**主要任务**是**集中力量发展社会生产力，实现国家工业化，逐步满足人民日益增长的物质文化需要。**
+
+85.**中共八大**确定的我国社会主义经济建设的方针是：**既反保守又反冒进，在综合平衡中稳步前进**。
+
+86.1961年1月，**中共八届九中全会**决定，从1961年起两三年内对国民经济实行**“调整、巩固、充实、提高”**的**方针**。
+
+### 第九章 改革开放于中国特色社会主义的开创和发展
+
+87.几个新的重要节点：
+
+1. **十一届三中全会**开启了我国**改革开放和社会主义现代化建设新时期**。
+2. **邓小平南方谈话**把**改革开放和现代化建设推向新阶段**。
+3. **党的十八大**开启了**中国特色社会主义新时代**。
+4. **党的十八届三中全会**开创了我国**改革开放新局面**。
+
+88.1979年，**《关于建国以来党的若干历史问题的决议》**中**最核心的一条**：**确立毛泽东同志的历史地位，坚持和发展毛泽东思想**。**标志**着**党在指导思想上的拨乱反正胜利完成**。
+
+《中共中央关于党的百年奋斗重大成就和历史经验的决议》(简称“**《决议》**”)：
+
+1. 是一篇马克思主义的纲领性文献
+2. 是新时代中国共产党人牢记初心使命、坚持和发展中国特色社会主义的政治宣言
+3. 是以史为鉴、开创未来，实现中华民族伟大复兴的行动指南
+
+89.中共会议：
+
+| 中共会议                           | 时间地点            | 内容                                                         |
+| ---------------------------------- | ------------------- | ------------------------------------------------------------ |
+| 中共一大                           | 1921年7月23日       | 一大建党                                                     |
+| 中共二大                           | 1922年              | 二大纲；第一次提出党的**反帝反封建的民主革命纲领**；第一次提出**党的统一战线思想**；第一次**公开发表《中国共产党宣言》**；制定了**第一部《中国共产党章程》** |
+| 中共三大                           |                     | 全体共产党员一个人名义加入国民党，同孙中山领导的国民党建立统一战线(共产党丧失独立自主地位) |
+| 八七会议                           | 1927年              | 1.会议彻底清算了大革命后期的陈独秀右倾机会主义错误(太依赖资产阶级)（正确态度：又联合又斗争）<br />2.确定了土地改革和武装反抗国民党反动统治的总方针。会议明确提出土地革命是中国资产阶级民主革命的**中心问题**<br />3.毛泽东提出**“枪杆子里出政权”**<br />中国革命处于严重危机情况下，八七会议的及时召开，并制定出继续革命的正确方针，为挽救党和革命作出巨大贡献。中国革命由此开启了由**大革命失败到土地革命战争兴起的历史性转变** |
+| 古田会议                           | 1929年              | 1.会议确立了**思想建党、政治建军的原则**，规定红军是一个执行革命的**政治任务**的武装集团，必须绝对服从共产党的领导，必须担负打仗、筹款和做群众工作的任务，必须加强政治工作<br />2.加强**思想建设**入手，保持党的无产阶级先锋队性质和建设党领导的新型人民军队的问题，这是人民军队完全有别于一切旧军队的政治特质和根本优势。 |
+| 中华苏维埃第一次全国工农兵代表大会 | 1931年              | 土地革命时期，在江西瑞金召开；通过了《中华苏维埃共和国宪法大纲》以及土地法令、劳动法等文件；选举产生了中华苏维埃共和国中央执行委员会；成立了**中华苏维埃共和国临时中央政府**，毛泽东当选为主席；实施**工农兵代表大会制度**；(换言之，第一次国共合作共产党既没有政权、也没有军队) |
+| 遵义会议                           | 1935年              | 解决了**军事问题和组织问题**；**政治问题(瓦窑堡会议)** **思想问题(延安整风运动)**生死攸关的转折点（三个生死攸关的转折点：八七会议、遵义会议和十一届三中全会），标志着中国共产党在政治上**开始走向成熟**；遵义会议的鲜明特点：**坚持真理、修正错误** |
+| 瓦窑堡会议                         | 1935年陕北          | **建立抗日民族统一战线**<br />1.阐明建立抗日民族统一战线的可能性（抗日民族统一战线策略总方针：发展进步势力，争取中间势力，孤立顽固势力）<br />2.批判了“左”倾关门主义错误，强调共产党在抗日民族统一战线中的领导作用（对顽固势力，既联合又斗争；原则：有理有利有节）<br />3.规定了建立广泛抗日民族统一战线的具体政策，决定以“人民共和国”代替“工农共和国” |
+| 洛川会议                           | 1937年              | 强调要打倒日本帝国主义，关键在于使已经发动的抗战成为**全面的全民族的抗战(全面抗战路线)**，以及**抗日救国十大纲领(抗日纲领)** |
+| 六届六中全会                       | 1938年              | 毛泽东  (《论新阶段》)**首次提出马克思主义中国化** <br />中共七大 (毛泽东)完成了**第一次结合的历史性飞跃**。 (新民主主义革命理论系统阐明，标志着毛泽东主义的成熟)<br />1956年  毛泽东提出马克思主义中国化第二次结合的任务《论十大关系》中提出                                        邓小平改革开放后完成了第二次结合的历史性飞跃，即中国特色社会主义理论成果<br />期间文章：《共产党人发刊词》《中国革命和中国共产党》《新民主主义论》；**革命道路理论确立于《战争与战略问题》** |
+| 重庆政治协商会议                   | 1946年              | 五项协定  1.政府组织 2.国民大会 3.和平建国纲领 4.宪法草案 5.军事问题 |
+| 七届二中全会(西柏坡会议)           | 1949年              | 1.提出迅速夺取全国胜利的方针：天津式、北平式、绥远式<br />2.党的**工作重心必须由乡村转移到城市**<br />3.指出了中国由农业国转变为工业国，由新民主主义社会转变为社会主义社会的总任务和主要途径<br />4.提出**“两个务必”**，务必使同志们继续保持谦虚、谨慎、不骄、不躁的作风，务必使同志保持艰苦奋斗的作风 |
+| 第一届人民政协会议                 | 1949年9月           | 《中国人民政治协商会议组织法》《中华人民共和国中央人民政府组织法》《中国人民政治协商会议**共同纲领**》 |
+| 中共七大                           |                     | 规定**毛泽东思想为党一切工作的指针**                         |
+| 中共八大                           | 1956年              | 主要矛盾改变，基本任务——在新生产关系下保护和发展生产力；陈云提出——三个主体、三个补充；提出经济建设方针，既**反保守又反冒进即在综合平衡中稳步前进**； |
+| 中共八届九中全会                   | 1961年1月           | 决定国民经济实行的**方针是“调整、巩固、充实、提高”**         |
+| 十一届三中全会                     | 1978年12月18日-22日 | 重新确立党的思想路线、揭开了社会主义改革开放的序幕，中国**进入了改革开放和社会主义现代化建设的历史新时期**；实现了**新中国成立以来党的历史上具有深远意义的伟大转折**；1979年11月，邓小平对《决议》提出了指导原则，最**核心**一条是**确立毛泽东同志的历史地位，坚持和发展毛泽东思想**； |
+| 十一届六中全会                     | 1981年              | **第一次明确地提出了"我国的社会主义制度还处于初级阶段**。科学的评价的毛泽东同志和毛泽东思想，提出了毛泽东思想活的灵魂是三个方面；通过了《关于建国以来党的若干历史问题的**决议》**，**标志着党在指导思想上拨乱反正的胜利完成**。 |
+| 中共十二大                         |                     | **坚持和发展中国特色社会主义成为（改革开放以来）我们党全部理论和实践创新的主题**（也是习近平新时代中国特色社会主义思想的**核心要义**），邓小平在十二大明确提出**“建设有中国特色社会主义”这一具有里程碑意义的重大命题**（邓小平理论主题形成） |
+| 中共十三大                         | 1987年10月25日      | **把“社会主义初阶阶段”作为事关全局的国情加以把握，第一次对社会主义初级阶段理论做了系统的论述**，并提出了社会主义初级阶段的一个中心两个基本点的基本路线，我们党对中特理论进行系统概括，标志着**邓小平理论轮廓的形成** |
+| 南方谈话                           | 1992年1月           | 1.计划和市场都是手段 <br />2.阐明了社会主义本质 <br />3.提出了“发展才是硬道理的重要论断”<br />4.提出改革开放和各项工作成败得失的“三个有利于”标准 <br />5.强调加强党的建设 <br />6.关于社会主义初级阶段的长期性和前途<br />**邓小平理论走向成熟**；“**社会主义的本质是解放生产力，发展生产力，消灭剥削，消灭两极分化**” |
+| 中共十四大                         | 1992年10月          | 提出了我国**经济体制改革的目标**是**建立社会主义市场经济体制**(确定了我国社会主义市场经济的改革目标)，提出“**要使市场在社会主义国家宏观调控下对资源配置起==基础性==作用**” |
+| 中共十五大                         | 1997年9月           | **邓小平理论**同马克思列宁主义毛泽东思想一起，**确立为指导思想写入党章**。大会**提出党在社会主义初级阶段的基本纲领**。 |
+| 中共十六大                         | 2002年              | 全面建设小康社会的奋斗目标                                   |
+| 中共十七大                         |                     | **中特理论体系**                                             |
+| 中共十八大                         | 2012年              | 改为“**市场在社会主义国家宏观调控下对资源配置起==决定性==作用**”；**新发展理念**是**最重要、最主要**的。中共十八大的召开，标志着**中国已经进入全面建成小康社会的决定性阶段**，**开启了中国特色社会主义新时代**。 |
+| 中共十九大                         |                     | 党的十九大报告提出**新时代党的建设总要求**，提出把党的**政治建设摆在首位**，以**政治建设为统领**深入推进党的建设 |
+| 十九届四中全会                     |                     | 指出**社会主义基本经济制度**：“**公有制为主体，多种所有制经济共同发展，按劳分配为主体，多种分配方式并存，社会主义市场经济体制等**” |
+| 十九届五中全会                     |                     | 进入新发展阶段，完整、准确、全面贯彻新发展理念，必须更加注重**共同富裕**问题；全会**最重要成果**是审议通过了《中共中央关于党的百年奋斗成就和历史经验的决议》，对习近平新时代中国特色社会主义思想的概括阐述，是《决议》的一个**突出亮点**，也是一个**重大贡献**； |
+
+### 第十章 中国特色社会主义进入新时代
+
+90.主要成就及其作用：
+
+1. **新民主主义革命的伟大成就**为**实现中华民族伟大复兴创造了根本社会条件**。
+
+2. **社会主义革命和建设的伟大成就**为**实现中华民族伟大复兴奠定了根本政治前提和制度基础**。
+
+3. **改革开放和社会主义现代化建设的伟大成就**为**实现中华民族伟大复兴提供了充满新的活力的体制保证和快速发展的物质条件**。
+
+4. **新时代中国特色社会主义伟大成就**为**实现中华民族伟大复兴提供了更为完善的制度保证、更为坚实的物质基础、更为主动的精神力量**。
+
+91.经济有关话题的必要性回答模板：
+
+这是适应把握引领经济发展新常态的重大创新，是适应国际金融危机发生后综合国力竞争新形势的主动选择，是推动我国经济实现高质量发展的必然要求。
