:sparkles:知识点排版修改、标注修改

--- a/思想政治理论.md
+++ b/思想政治理论.md
@@ -1856,11 +1856,11 @@
 
 4.中国近代史上中国人民第一次大规模的反侵略武装斗争是**三元里人民的抗英斗争**。
 
-5.《资政新篇》主张在中国发展资本主义，实际上要进行政治、经济、文化制度的改革。
+5.**《资政新篇》**主张在中国发展资本主义，实际上要进行政治、经济、文化制度的改革。
 
 《海国图志》仅仅主张向西方学习军事和科学技术。二者共同点是“**向西方学习**”。
 
-6.“**师夷长技以制夷**”是魏源在1843年《海国图志》中提出的。
+6.“**师夷长技以制夷**”是魏源在1843年**《海国图志》**中提出的。
 
 “**睁眼看世界**”是鸦片战争（1840年）以后先进的中国人提出的
 
@@ -1912,7 +1912,11 @@
 
 16.**拉开了**近代以来**中国发生的深刻社会变革序幕**的事件：**辛亥革命**
 
-17.《钦定宪法大纲》是清政府于1908年颁布；《中华民国约法》是1914年5月袁世凯公然撕毁《中华民国临时约法》后炮制的；《训政纲领》是1928年10月国民党中央常务会议通过的纲领性文件，实质是在中国实行国民党的一党专政。
+17.一些纲领性文件：
+
+* 《钦定宪法大纲》是清政府于1908年颁布；
+* 《中华民国约法》是1914年5月袁世凯公然撕毁《中华民国临时约法》后炮制的；
+* 《训政纲领》是1928年10月国民党中央常务会议通过的纲领性文件，实质是在中国实行国民党的一党专政。
 
 18.南京临时政府的《告友邦书》，试图用承认清政府与列强所订的一切不平等条约和清政府所欠的一切外债，来换取列强承认中华民国。**这是南京临时政府的局限性**。
 
@@ -1948,7 +1952,7 @@
 30.早期马克思主义者队伍，主要是由**新文化运动的精神领袖**、**五四爱国运动的左翼骨干**和**一部分原中国同盟会会员、辛亥革命时期的活动家**三种人组成的。
 
 1. 李大钊、陈独秀属于先驱者和擎旗人
-2. 毛泽东等五四爱国运动的左翼骨干则是**主体部分**
+2. 毛泽东等五四爱国运动的**左翼骨干**则是**主体部分**
 
 31.**中国二大**第一次明确提出了**反帝反封建的民主革命纲领**。
 
@@ -1964,7 +1968,7 @@
 
 37.1925年6月，**省港大罢工**前后坚持了16个月之久，是**中国工人运动史上持续时间最长的一次政治大罢工**
 
-38.1922年1月香港海员罢工到1923年2月京汉铁路工人罢工，掀起了**中国工人运动的第一个高潮**。
+38.1922年1月**香港海员罢工**到1923年2月**京汉铁路工人罢工**，掀起了**中国工人运动的第一个高潮**。
 
 39.大革命失败，主要指**反帝反封建的革命任务没有完成**。
 
